--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -13,7 +13,7 @@
       cursor: pointer;
 
       &:focus {
-        outline: 3px solid blue;
+        outline: 1px solid black;
       }
 
       &--active {
@@ -26,7 +26,7 @@
     padding: 50px 0;
     &__item {
       &:focus {
-        outline: 3px solid blue;
+        outline: 1px solid black;
       }
 
       &__title {
@@ -71,7 +71,7 @@
       background: rgb(240, 240, 240);
     }
     &:focus {
-      outline: 3px solid blue;
+      outline: 2px solid black;
     }
 
     th {
