--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,91 +1,12 @@
+@import "./modules/Accordion.scss";
+@import "./modules/Table.scss";
+@import "./modules/Tabs.scss";
+
 .container {
   max-width: 600px;
   margin: 0 auto;
   padding: 50px 0;
   font-family: cursive;
-
-  .tabs-container {
-    display: flex;
-
-    &__tab {
-      border: 1px solid black;
-      padding: 10px 25px;
-      cursor: pointer;
-
-      &:focus {
-        outline: 1px solid black;
-      }
-
-      &--active {
-        background: rgb(201, 201, 201);
-      }
-    }
-  }
-
-  .accordions {
-    padding: 50px 0;
-    &__item {
-      &:focus {
-        outline: 1px solid black;
-      }
-
-      &__title {
-        padding: 10px 5px;
-        cursor: pointer;
-        border-width: 2px;
-        border-style: solid;
-        display: flex;
-        justify-content: space-between;
-
-        &__icon {
-          display: flex;
-          align-items: center;
-          transform: scale(1.3);
-        }
-      }
-      &__content {
-        background-color: white;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.2s ease-out;
-
-        &--expanded {
-          max-height: calc(100vh - 150px);
-          overflow-y: auto;
-        }
-      }
-    }
-  }
 }
 
-.app-table {
-  border-width: 0 2px 2px 2px;
-  border-style: solid;
-  border-collapse: collapse;
-  width: 100%;
 
-  tr {
-    cursor: pointer;
-
-    &:nth-child(odd) {
-      background: rgb(240, 240, 240);
-    }
-    &:focus {
-      outline: 2px solid black;
-    }
-
-    th {
-      background: rgb(197, 197, 197);
-    }
-
-    td,
-    th {
-      border: 2px solid black;
-      padding: 5px;
-      text-align: left;
-      &:nth-child(even) {
-        text-align: right;
-      }
-    }
-  }
-}
