--- a/src/assets/modules/Tabs.scss
+++ b/src/assets/modules/Tabs.scss
@@ -1,17 +1,15 @@
+@import "../variables/variables.scss";
+
 .tabs-container {
   display: flex;
 
   &__tab {
-    border: 1px solid black;
+    border: 1px solid $color--black;
     padding: 10px 25px;
     cursor: pointer;
 
-    &:focus {
-      outline: 1px solid black;
-    }
-
     &--active {
-      background: rgb(201, 201, 201);
+      background: $color--grey--dark;
     }
   }
 }
