Refactor the Accordion state logic, create a new component for table row

--- a/src/assets/modules/Accordion.scss
+++ b/src/assets/modules/Accordion.scss
@@ -28,8 +28,7 @@
       transition: max-height 0.2s ease-out;
 
       &--expanded {
-        max-height: calc(100vh - 250px);
-        overflow-y: auto;
+        max-height: 100%;
       }
     }
   }
