--- a/src/assets/AppsModule.scss
+++ b/src/assets/AppsModule.scss
@@ -8,3 +8,8 @@
   padding: 50px 0;
   font-family: cursive;
 }
+.output-msg {
+  text-align: center;
+  font-family: cursive;
+  font-size: 26px;
+}
