WCAG, structure improvements

--- a/src/assets/AppsModule.scss
+++ b/src/assets/AppsModule.scss
@@ -1,3 +1,4 @@
+@import "./variables/variables.scss";
 @import "./modules/Accordion.scss";
 @import "./modules/Table.scss";
 @import "./modules/Tabs.scss";
