--- a/src/assets/variables/variables.scss
+++ b/src/assets/variables/variables.scss
@@ -3,3 +3,4 @@ $color--white: #ffffff;
 $color--grey--light: #f0f0f0;
 $color--grey--medium: #c5c5c5;
 $color--grey--dark: #c9c9c9;
+$font--main: cursive;
