--- a/src/assets/modules/Table.scss
+++ b/src/assets/modules/Table.scss
@@ -1,6 +1,3 @@
-@import "../variables/variables.scss";
-@import "../variables/variables.scss";
-
 @keyframes slideInDown {
   0% {
     max-height: 0;
@@ -40,6 +37,9 @@
         border-left: 0;
         padding: 5px;
         text-align: left;
+        &:focus-visible {
+          outline: 2px solid $color--black;
+        }
         &:nth-child(even) {
           text-align: right;
         }
