Files reorganization, new hook created for accordion

--- a/src/assets/modules/Accordion.scss
+++ b/src/assets/modules/Accordion.scss
@@ -6,7 +6,6 @@
     &:first-of-type {
       border-bottom: 0;
     }
-
     &__title {
       background: $color--white;
       font-family: $font--main;
@@ -18,7 +17,6 @@
       cursor: pointer;
       font-size: 18px;
       position: relative;
-
       &:after {
         right: 20px;
         width: 22px;
@@ -27,21 +25,31 @@
         content: "";
         background-size: cover;
       }
-
-      &--expanded:after {
-        background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cg stroke='%23000'%3E%3Cellipse cx='8' cy='8' fill='%23fff' rx='7' ry='7'%3E%3C/ellipse%3E%3Cpath fill='none' d='M3.593 8.053L12.472 8.053'%3E%3C/path%3E%3Cpath fill='none' d='M3.593 8.053L12.472 8.053' transform='rotate(90 8.032 8.053)' %3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-      }
-      &--collapsed:after {
-        background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cg stroke='%23000'%3E%3Cellipse cx='8' cy='8' fill='%23fff' rx='7' ry='7'%3E%3C/ellipse%3E%3Cpath fill='none' d='M3.593 8.053L12.472 8.053'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
-      }
     }
     &__content {
       background-color: $color--white;
       max-height: 0;
       overflow: hidden;
-
-      &--expanded {
-        max-height: 100%;
+    }
+    &--expanded {
+      .accordions__item {
+        &__title {
+          &:after {
+            background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cg stroke='%23000'%3E%3Cellipse cx='8' cy='8' fill='%23fff' rx='7' ry='7'%3E%3C/ellipse%3E%3Cpath fill='none' d='M3.593 8.053L12.472 8.053'%3E%3C/path%3E%3Cpath fill='none' d='M3.593 8.053L12.472 8.053' transform='rotate(90 8.032 8.053)' %3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+          }
+        }
+        &__content {
+          max-height: 100%;
+        }
+      }
+    }
+    &--collapsed {
+      .accordions__item {
+        &__title {
+          &:after {
+            background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cg stroke='%23000'%3E%3Cellipse cx='8' cy='8' fill='%23fff' rx='7' ry='7'%3E%3C/ellipse%3E%3Cpath fill='none' d='M3.593 8.053L12.472 8.053'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+          }
+        }
       }
     }
   }
