--- a/src/assets/AppsModule.scss
+++ b/src/assets/AppsModule.scss
@@ -7,10 +7,10 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 50px 0;
-  font-family: cursive;
+  font-family: $font--main;
 }
 .output-msg {
   text-align: center;
-  font-family: cursive;
+  font-family: $font--main;
   font-size: 26px;
 }
