--- a/src/assets/modules/Table.scss
+++ b/src/assets/modules/Table.scss
@@ -10,27 +10,27 @@
 .table-container {
   animation: slideInDown 0.3s forwards;
   overflow-y: auto;
-
   .app-table {
     border: none;
     border-collapse: collapse;
     width: 100%;
-
     tr {
       cursor: pointer;
-
       &:nth-child(odd) {
         background: $color--grey--light;
+      }
+      &:last-child {
+        td {
+          border-bottom: 0;
+        }
       }
       &:focus {
         box-shadow: inset 0 0 0 2px $color--black;
         outline: 1px solid $color--black;
       }
-
       th {
         background: $color--grey--medium;
       }
-
       td,
       th {
         border: 2px solid $color--black;
