--- a/src/assets/variables/variables.scss
+++ b/src/assets/variables/variables.scss
@@ -1,6 +1,9 @@
 $color--black: #000000;
 $color--white: #ffffff;
+$color--white--code: #f1f1f1;
 $color--grey--light: #f0f0f0;
 $color--grey--medium: #c5c5c5;
 $color--grey--dark: #c9c9c9;
+$color--obsidian: #1b1b1c;
 $font--main: cursive;
+$font--code: consolas;
